style.css
body {
    width: 100%;
    margin: 10px;
    background-color: rgb(5, 61, 114);
}

.nav-links {
    display: flex;
    list-style: none;
    padding: 10px;
    align-items: center;
    gap: 20px;
    height: 70px;
    justify-content: space-between;
}


a {
    text-decoration: none;
    color: white;
}

.nav-links a:hover {
    background-color: rgb(146, 89, 4);
    display: inline-block;
    padding: 10px 15px;
    transition: transform 0.3s ease;
    will-change: transform;
    transform-origin: center;
}

.nav-links a:hover {
    transform: scale(1.08);
    /* small scale only */
}

.logo {
    background-color: rgb(234, 250, 215);
    text-decoration: dotted;
    font-size: larger;
}

.hero-image {
    width: 100%;
    height: 700px;
    overflow: hidden;
}


.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
    height: fit-content;
    background-color: rgb(30, 30, 131);
}

.hero-container {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}


.hero-text,
.hero-image {
    flex: 1 1 400px;
    padding: 2px;
    color: white;
}

.info,
.quote {
    color: white;
    font-weight: bold;
}

.hero-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;

}

.info-cards {
    display: flex;
    gap: 24px;
    justify-content: center;
}

.card {
    max-width: 150px;
    text-align: center;
}

.cta-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #b4bbc7;
    padding: 32px;
    border-radius: 8px;
    color: white;
}

.footer {
    padding: 20px;
}

.author {
    font-weight: bold;
    fon
}

